--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,7 @@
 		<module>helloweb</module>
 		<module>emaillist01</module>
 		<module>guestbook02</module>
+		<module>jstel</module>
+		<module>jstlel</module>
 	</modules>
 </project>
